--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "homepage": "https://princesinha19.github.io/lucky-draw/",
   "dependencies": {
-    "@0x/contract-wrappers": "^13.8.0",
-    "@0x/utils": "^5.5.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "decimal.js": "^10.2.1",
@@ -20,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
